--- a/ol/cli/web-monitor/package.json
+++ b/ol/cli/web-monitor/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "sirv public -s",
     "validate": "svelte-check"
   },
   "devDependencies": {
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5",
+    "svelte-routing": "^1.6.0"
   }
 }
